--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pino": "^8.1.0",
     "body-parser": "^1.20.1",
     "express": "^4.18.1",
+      "open": "^8.4.2",
     "path": "^0.12.7"
    }
 }
