--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
+    { "src": "pages/index.js", "use": "@vercel/next" },
+    { "src": "api/merge.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.js"
-    }
+    { "src": "/api/.*", "dest": "/api/merge.js" }
   ]
 }
