--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
   "version": 2,
   "builds": [
-    { "src": "pages/index.js", "use": "@vercel/next" },
-    { "src": "api/merge.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/api/.*", "dest": "/api/merge.js" }
+    { "src": "package.json", "use": "@vercel/next" }
   ]
 }
