--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-    "description": "qr",
-    "main": "./index.js",
-  "engines" : { 
-    "npm" : ">=9.7.2",
-    "node" : ">=20.0.0"
-    },
-    "scripts": {
-    "start": "node index.js"
+  "name": "html-merge-print",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "git+https://github.com/A-d-i-t-h-y-a-n/Baileys.js.git",
-    "pino": "^8.1.0",
-    "body-parser": "^1.20.1",
-    "express": "^4.18.1",
-      "open": "^8.4.2",
-    "path": "^0.12.7"
-   }
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "formidable": "^2.0.1"
+  }
 }
